[tool.poetry]
name = "fasapi-audio-loader"
version = "0.1.0"
description = ""
authors = ["Smitona <jarofsmetana@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
authx = "^1.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
aiosqlite = "^0.21.0"
pydantic = {extras = ["email"], version = "^2.11.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
